syntax = "proto3";

package pb;

option java_multiple_files = true;
option java_package = "com.dabanshan.grpc";
option java_outer_classname = "AccountServiceProto";
option objc_class_prefix = "DBS";

import "account.proto";

service AccountService {
    rpc createAccount (CreateAccountRequest) returns (CreateAccountResponse);
    rpc getAccount (GetAccountRequest) returns (GetAccountResponse);
    rpc getByUsername (GetByUsernameRequest) returns (GetByUsernameResponse);

    rpc createAuthInfo (CreateAuthInfoRequest) returns (CreateAuthInfoResponse);
    rpc checkAuthInfo (CreateCheckAuthInfoRequest) returns (CreateCheckAuthInfoResponse);
    rpc getCurrentAuthInfo (GetAuthInfoRequest) returns (GetAuthInfoResponse);
}
